--- a/helloNes1/CMakeLists.txt
+++ b/helloNes1/CMakeLists.txt
@@ -12,8 +12,8 @@ set(SOURCES
 # compile asm
 add_custom_command(
     OUTPUT main.o
-    COMMAND ${CMAKE_ASM_COMPILER} -v -o ${CMAKE_CURRENT_BINARY_DIR}/main.o ${CMAKE_CURRENT_SOURCE_DIR}/src/main.asm
-    COMMAND ${CMAKE_ASM_COMPILER} -v -o ${CMAKE_CURRENT_BINARY_DIR}/app.o ${CMAKE_CURRENT_SOURCE_DIR}/src/app.asm
+    COMMAND ${CMAKE_ASM_COMPILER} -g -v -o ${CMAKE_CURRENT_BINARY_DIR}/main.o ${CMAKE_CURRENT_SOURCE_DIR}/src/main.asm
+    COMMAND ${CMAKE_ASM_COMPILER} -g -v -o ${CMAKE_CURRENT_BINARY_DIR}/app.o ${CMAKE_CURRENT_SOURCE_DIR}/src/app.asm
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src
     DEPENDS ${SOURCES}
     COMMENT "Assembling(1/2) NES ROM ..."
@@ -22,7 +22,7 @@ add_custom_command(
 # link
 add_custom_command(
     OUTPUT ${ROM_NAME}
-    COMMAND ${CMAKE_ASM_LINKER} -o ${ROM_NAME} -v -t nes main.o app.o
+    COMMAND ${CMAKE_ASM_LINKER} -o ${ROM_NAME} -g -v -t nes main.o app.o
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
     DEPENDS main.o
     COMMENT "Assembling(2/2) NES ROM ..."
